--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   
     <title>Zion Miller</title>
   </head>
-  <body style="background-color: #e8eed8;">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
